--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vscode/*
 !.vscode/settings.json
-!.vscode/.prettierrc.json
+!.vscode/prettierrc.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
